# parallel-k-means

./: CMakeLists.txt  README.md
include/: Cluster.h  Kmeans.h  Parallel.h  Point.h  Sequential.h
src/: Kmeans.cpp  main.cpp  parallel.cpp  sequential.cpp
